fix(media): wrong alignment of description block in MediaHero.tsx

--- a/apps/media/src/remote.css
+++ b/apps/media/src/remote.css
@@ -321,9 +321,9 @@
       grid-template-rows: repeat(2, minmax(0, 1fr));
     }
   }
-  .mda\:md\:px-5 {
+  .mda\:md\:px-6 {
     @media (width >= 48rem) {
-      padding-inline: var(--mda-spacing-5);
+      padding-inline: var(--mda-spacing-6);
     }
   }
   .mda\:lg\:bottom-8 {
@@ -351,9 +351,9 @@
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
-  .mda\:lg\:px-5 {
+  .mda\:lg\:px-8 {
     @media (width >= 64rem) {
-      padding-inline: var(--mda-spacing-5);
+      padding-inline: var(--mda-spacing-8);
     }
   }
   .mda\:\[\.media-section\:nth-of-type\(even\)_\&\]\:bg-white {
